# image-titler

./: .gitignore  .travis.yml  MANIFEST.in  README.md  exe-setup.py  pyproject.toml  requirements.txt  setup.py  trc_image_titler.py  winstall.py
.github/: FUNDING.yml
.github/workflows/: deploy.yml  test.yml
image_titler/: cmd.py  command.py  gui.py  trc_image_titler.py  utilities.py
imagetitler/: __init__.py  cli.py  constants.py  draw.py  gui.py  parse.py  store.py
imagetitler/tests/: test_utilities.py
interfaces/: cli.py  gui.py
samples/: README.md
scripts/: cli.py  gui.py
test/: test_command.py  test_trc_image_titler.py  test_utilities.py
tests/: test_utilities.py
titler/: cli.py  constants.py  draw.py  gui.py  parse.py  store.py
utilities/: constants.py  draw.py  parse.py  store.py
